force-app/main/default/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Load_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Load Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Picture__c</fullName>
        <formula>IMAGE(Picture_URL__c , &quot;Picture&quot;, 200, 175
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Number__c</fullName>
        <label>Drivers License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Candidate_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Candidate Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picture_ID__c</fullName>
        <label>Picture ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_Link__c</fullName>
        <formula>IF( ISBLANK( Picture_ID__c ), &quot;&quot;, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture_ID__c , &quot;Candidate Picture&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <formula>IF(ISBLANK(Picture_ID__c ), &quot;&quot;, &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>US_Postal_Code_Format</fullName>
        <active>false</active>
        <description>US postal codes must be in the format 99999 or 99999-9999.</description>
        <errorConditionFormula>(Country__c = &quot;USA&quot; || Country__c = &quot;US&quot;)
&amp;&amp;
NOT(REGEX(Zip_Postal_Code__c, &quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>US postal codes must be in the format 99999 or 99999-9999.</errorMessage>
    </validationRules>
</CustomObject>