force-app/main/default/objects/Candidate__c/validationRules/US_Postal_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Postal_Code_Format</fullName>
    <active>false</active>
    <description>US postal codes must be in the format 99999 or 99999-9999.</description>
    <errorConditionFormula>(Country__c = &quot;USA&quot; || Country__c = &quot;US&quot;)
&amp;&amp;
NOT(REGEX(Zip_Postal_Code__c, &quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>US postal codes must be in the format 99999 or 99999-9999.</errorMessage>
</ValidationRule>